--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   get: ^4.3.8
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  intl_phone_number_input: ^0.7.0+2
   logger: ^1.1.0
   retrofit: ^2.0.1
   uuid: ^3.0.4
