--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   easy_localization_loader: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_multi_formatter: ^2.3.5
   flutter_svg: ^0.22.0
   get: ^4.3.8
   hive: ^2.0.4
@@ -40,3 +41,6 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
